--- a/ClientDashboard_API/Properties/launchSettings.json
+++ b/ClientDashboard_API/Properties/launchSettings.json
@@ -14,7 +14,11 @@
       "commandName": "Project",
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "accountSid": "ACfc9c7bdecec6f2349fd5156d560bdbe8",
+        "authToken": "65175b7c1566e0ec7cce8094b7e35287",
+        "senderPhoneNumber": "+447366323139",
+        "receiverPhoneNumber": "+447850320047"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7217;http://localhost:5114"
