Specify ClientDashboard_API.csproj with api-ci pipeline allowing project to be detected and continue past Restoring dependencies pipeline job

--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -43,10 +43,10 @@ jobs:
             ${{ runner.os }}-nuget-
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore ClientDashboard_API.csproj
 
       - name: Build solution
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build ClientDashboard_API.csproj --configuration Release --no-restore
 
       - name: Run tests
         run: dotnet test --configuration Release --no-build --verbosity normal --logger "trx;LogFileName=test-results.trx" --collect:"XPlat Code Coverage"
