--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/chechout@v3
 
       - name: Setup .NET
-        uses: actions/seyup-dotnet@v3
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '9.0.x'
 
