Change on pipeline branch names to master to correctly trigger upon specified action

--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -2,7 +2,7 @@ name: API CI
 
 on:
   pull_request:
-    branches: [ main, develop ]
+    branches: [ master, develop ]
     paths:
       - 'ClientDashboard_API/Controllers/**'
       - 'ClientDashboard_API/Data/**'
