Change google verification file to Copy to Output directory to Copy Always , allowing it to be percieved during deployment

--- a/ClientDashboard_API/ClientDashboard_API.csproj
+++ b/ClientDashboard_API/ClientDashboard_API.csproj
@@ -25,4 +25,9 @@
   <ItemGroup>
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="wwwroot\google45f9e3f493489c5e.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
