Configure migration checker, that correctly applies pending migrations or create new database if missing upon project startup

--- a/ClientDashboard_API/ClientDashboard_API.csproj
+++ b/ClientDashboard_API/ClientDashboard_API.csproj
@@ -30,4 +30,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <None Update="clientSession.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
