--- a/ClientDashboard_GUI/package.json
+++ b/ClientDashboard_GUI/package.json
@@ -31,7 +31,7 @@
   },
   "devDependencies": {
     "@angular/build": "^20.1.0-rc.0",
-    "@angular/cli": "^20.1.0-rc.0",
+    "@angular/cli": "^19.2.17",
     "@angular/compiler-cli": "^20.1.0-next.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.8.0",
