Finalising changes ensuring primeng components can be utilised with downgraded Angular version

--- a/ClientDashboard_GUI/angular.json
+++ b/ClientDashboard_GUI/angular.json
@@ -13,7 +13,12 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/client-dashboard-gui",
+            "index": "src/index.html",
             "browser": "src/main.ts",
+            "polyfills": [
+              "zone.js"
+            ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
