--- a/ClientDashboard_GUI/package.json
+++ b/ClientDashboard_GUI/package.json
@@ -26,6 +26,7 @@
     "@angular/forms": "^19.0.0",
     "@angular/platform-browser": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@primeuix/themes": "^1.2.3",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.4",
     "rxjs": "~7.8.0",
