--- a/ClientDashboard_API/appsettings.Development.json
+++ b/ClientDashboard_API/appsettings.Development.json
@@ -1,12 +1,18 @@
 {
   "Logging": {
     "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost,1433;Database=ClientDataDb;User Id=SA;Password=Password@1; TrustServerCertificate=True"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=ClientDataDb;User Id=SA;Password=Password@1; TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Secret": "",
+    "Issuer": "calconnect",
+    "Audience": "account",
+    "ExpirationInMinutes": "120"
   }
+}
 
