jwt secret naming changeto allow azure to detect it upon initialistion of the api

--- a/ClientDashboard_API/appsettings.json
+++ b/ClientDashboard_API/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Secret": "",
     "Issuer": "",
     "Audience": "",
-    "ExpirationInMinutes":  ""
-  }
+    "ExpirationInMinutes": ""
+  },
+  "Jwt__Secret": ""
 }
