--- a/ClientDashboard_API/appsettings.Development.json
+++ b/ClientDashboard_API/appsettings.Development.json
@@ -9,10 +9,10 @@
     "DefaultConnection": "Server=localhost,1433;Database=ClientDataDb;User Id=SA;Password=Password@1; TrustServerCertificate=True"
   },
   "Jwt": {
-    "Secret": "",
     "Issuer": "calconnect",
     "Audience": "account",
     "ExpirationInMinutes": "120"
-  }
+  },
+  "Jwt__Secret": ""
 }
 
