Adjust remaining properties so that can also be provided via azure, being present within appsettings.Development wouldn't allow them to be capured by the azure environment running in Production

--- a/ClientDashboard_API/appsettings.Development.json
+++ b/ClientDashboard_API/appsettings.Development.json
@@ -8,11 +8,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=ClientDataDb;User Id=SA;Password=Password@1; TrustServerCertificate=True"
   },
-  "Jwt": {
-    "Issuer": "calconnect",
-    "Audience": "account",
-    "ExpirationInMinutes": "120"
-  },
+  "Jwt__Issuer": "calconnect",
+  "Jwt__Audience": "account",
+  "Jwt__ExpirationInMinutes": "120",
   "Jwt__Secret": ""
 }
 
