--- a/ClientDashboard_API/appsettings.json
+++ b/ClientDashboard_API/appsettings.json
@@ -6,10 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Jwt": {
-    "Issuer": "",
-    "Audience": "",
-    "ExpirationInMinutes": ""
-  },
+  "Jwt__Issuer": "",
+  "Jwt__Audience": "",
+  "Jwt__ExpirationInMinutes": "",
   "Jwt__Secret": ""
 }
