Standardise jwt property naming

--- a/ClientDashboard_API/appsettings.Development.json
+++ b/ClientDashboard_API/appsettings.Development.json
@@ -8,9 +8,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=ClientDataDb;User Id=SA;Password=Password@1; TrustServerCertificate=True"
   },
-  "Jwt__Issuer": "calconnect",
-  "Jwt__Audience": "account",
-  "Jwt__ExpirationInMinutes": "120",
-  "Jwt__Secret": ""
+  "Jwt_Issuer": "calconnect",
+  "Jwt_Audience": "account",
+  "Jwt_ExpirationInMinutes": "120",
+  "Jwt_Secret": ""
 }
 
