--- a/ClientDashboard_API/appsettings.json
+++ b/ClientDashboard_API/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Jwt__Issuer": "",
-  "Jwt__Audience": "",
-  "Jwt__ExpirationInMinutes": "",
-  "Jwt__Secret": ""
+  "Jwt_Issuer": "",
+  "Jwt_Audience": "",
+  "Jwt_ExpirationInMinutes": "",
+  "Jwt_Secret": ""
 }
