--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -15,22 +15,47 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+  
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: './ClientDashboard_GUI/package-lock.json'
+
+      - name: Install Angular dependencies
+        working-directory: ./ClientDashboard_GUI
+        run: npm ci
+
+      - name: Build Angular application for production
+        working-directory: ./ClientDashboard_GUI
+        run: npm run build
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '9.0.x'
 
-      - name: Restore
+      - name: Restore .NET Dependencies
         run: dotnet restore ./ClientDashboard_API/ClientDashboard_API.csproj
 
-      - name: Build
+      - name: Build .NET API
         run: dotnet build ./ClientDashboard_API/ClientDashboard_API.csproj --configuration Release --no-restore
 
-      - name: Publish
+      - name: Copy Angular build to API wwwroot
+        run: |
+          # Remove existing wwwroot content
+          rm -rf ./ClientDashboard_API/wwwroot/*
+          # Copy Angular build output to wwwroot
+          cp -r ./ClientDashboard_GUI/dist/client-dashboard-gui/* ./ClientDashboard_API/wwwroot/
+          # List wwwroot contents for verification
+          echo "Contents of wwwroot after copy:"
+          ls -la ./ClientDashboard_API/wwwroot/
+
+      - name: Publish .NET API
         run: dotnet publish ./ClientDashboard_API/ClientDashboard_API.csproj --configuration Release --no-build --output '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
 
-      - name: Deployment
+      - name: Deployment to Azure App Service
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
