--- a/ClientDashboard_API/ClientDashboard_API.csproj
+++ b/ClientDashboard_API/ClientDashboard_API.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Twilio" Version="7.13.0" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Data\Migrations\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
