--- a/ClientDashboard_API/Properties/launchSettings.json
+++ b/ClientDashboard_API/Properties/launchSettings.json
@@ -16,7 +16,10 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "API_KEY": "7a610df4-9944-4f6f-ad60-bcb0450f5682",
-        "API_URL": "https://localhost:7217/api/HevyApi"
+        "API_URL": "https://localhost:7217/api/HevyApi",
+        "AUTH_TOKEN": "65175b7c1566e0ec7cce8094b7e35287",
+        "ACCOUNT_SID": "ACfc9c7bdecec6f2349fd5156d560bdbe8",
+        "SENDER_PHONE_NUMBER": "+447366323139"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7217;http://localhost:5114"
