Update ApiKeyEncrypter key value to ensure same key is retrieved through the constructor during the encryption/decryption process

--- a/ClientDashboard_API/appsettings.json
+++ b/ClientDashboard_API/appsettings.json
@@ -9,5 +9,9 @@
   "Jwt_Issuer": "",
   "Jwt_Audience": "",
   "Jwt_ExpirationInMinutes": "",
-  "Jwt_Secret": ""
+  "Jwt_Secret": "",
+  "ApiKeyEncrypter": {
+    "Key": "yJ3kT6vXnR9mQsW2pLzE8fBgN5cH7aU4dF1iK0oM3tY="
+
+  }
 }
