Remove ApiEncrypterKey from appsettings.json, only including within .Development for local development, and being set via Azure App Service environments for the production environment

--- a/ClientDashboard_API/appsettings.json
+++ b/ClientDashboard_API/appsettings.json
@@ -11,7 +11,7 @@
   "Jwt_ExpirationInMinutes": "",
   "Jwt_Secret": "",
   "ApiKeyEncrypter": {
-    "Key": "yJ3kT6vXnR9mQsW2pLzE8fBgN5cH7aU4dF1iK0oM3tY="
+    "Key": ""
 
   }
 }
