--- a/ClientDashboard_API/appsettings.Development.json
+++ b/ClientDashboard_API/appsettings.Development.json
@@ -11,6 +11,10 @@
   "Jwt_Issuer": "calconnect",
   "Jwt_Audience": "account",
   "Jwt_ExpirationInMinutes": "120",
-  "Jwt_Secret": ""
+  "Jwt_Secret": "",
+  "ApiKeyEncrypter": {
+    "Key": "yJ3kT6vXnR9mQsW2pLzE8fBgN5cH7aU4dF1iK0oM3tY="
+
+  }
 }
 
