--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -1,9 +1,9 @@
 name: Publish
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #   - master
+  push:
+    branches:
+    - master
 
 env:
   AZURE_WEBAPP_NAME: ClientDashboardApp
