Modify app.setting to ensure Quartz background jobs returning correct logging messages

--- a/ClientDashboard_API/appsettings.json
+++ b/ClientDashboard_API/appsettings.json
@@ -2,7 +2,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "ClientDashboard_API.Jobs": "Debug",
+      "Quartz": "Information"
     }
   },
   "AllowedHosts": "*",
