Configure properties utilised within FluentEmail set within both appsettings files, along with declaring papercut dockercontainer

--- a/ClientDashboard_API/appsettings.Development.json
+++ b/ClientDashboard_API/appsettings.Development.json
@@ -16,7 +16,12 @@
   "Jwt_Secret": "",
   "ApiKeyEncrypter": {
     "Key": "yJ3kT6vXnR9mQsW2pLzE8fBgN5cH7aU4dF1iK0oM3tY="
-
+  },
+  "Email": {
+    "SenderEmail": "jrfitnessinbox@gmail.com",
+    "Sender": "FitCast",
+    "Host": "fitcast.papercut",
+    "Port": 25
   }
 }
 
