--- a/ClientDashboard_API/appsettings.json
+++ b/ClientDashboard_API/appsettings.json
@@ -14,6 +14,11 @@
   "Jwt_Secret": "",
   "ApiKeyEncrypter": {
     "Key": ""
-
+  },
+  "Email": {
+    "SenderEmail": "",
+    "Sender":  "",
+    "Host": "",
+    "Port":  ""
   }
 }
