Properly configure appsettings to allow for the display of papercut for email simulation

--- a/ClientDashboard_API/appsettings.Development.json
+++ b/ClientDashboard_API/appsettings.Development.json
@@ -20,7 +20,7 @@
   "Email": {
     "SenderEmail": "jrfitnessinbox@gmail.com",
     "Sender": "FitCast",
-    "Host": "fitcast.papercut",
+    "Host": "localhost",
     "Port": 25
   }
 }
