--- a/ClientDashboard_API/appsettings.json
+++ b/ClientDashboard_API/appsettings.json
@@ -15,10 +15,11 @@
   "ApiKeyEncrypter": {
     "Key": ""
   },
+  "FrontendUrl":"https://fitcast.uk",
   "Email": {
     "SenderEmail": "",
-    "Sender":  "",
+    "Sender": "",
     "Host": "",
-    "Port":  0
+    "Port": 0
   }
 }
