--- a/.gitignore
+++ b/.gitignore
@@ -556,5 +556,8 @@ Temporary Items
 *.sqlite3
 
 # User secrets and sensitive configuration
-**/appsettings.Development.json
-**/appsettings.Local.json
+appsettings.Development.json
+appsettings.Production.json
+appsettings.Staging.json
+**/appsettings.*.json
+   !appsettings.json
