--- a/ClientDashboard_API/appsettings.Development.json
+++ b/ClientDashboard_API/appsettings.Development.json
@@ -8,14 +8,14 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=ClientDataDb;User Id=SA;Password=Password@1; TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,1433;Database=ClientDataDb;User Id=SA;Password=!qweWV123; TrustServerCertificate=True"
   },
   "Jwt_Issuer": "calconnect",
   "Jwt_Audience": "account",
   "Jwt_ExpirationInMinutes": "120",
   "Jwt_Secret": "",
   "ApiKeyEncrypter": {
-    "Key": "yJ3kT6vXnR9mQsW2pLzE8fBgN5cH7aU4dF1iK0oM3tY="
+    "Key": "b2zyCK/subCRWz7r9g/i90kTQY6koJuN0XdO58yXP34="
   },
   "FrontendUrl": "http://localhost:4200/",
   "Email": {
