Revert local password credentials within appsettings.development

--- a/ClientDashboard_API/appsettings.Development.json
+++ b/ClientDashboard_API/appsettings.Development.json
@@ -8,7 +8,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=ClientDataDb;User Id=SA;Password=!qweWV123; TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,1433;Database=ClientDataDb;User Id=SA;Password=Password@1; TrustServerCertificate=True"
   },
   "Jwt_Issuer": "calconnect",
   "Jwt_Audience": "account",
