--- a/ClientDashboard_API/docker-compose.yml
+++ b/ClientDashboard_API/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: sqlDb
     environment:
       ACCEPT_EULA: "Y"
-      MSSQL_SA_PASSWORD: "!qweWV123"
+      MSSQL_SA_PASSWORD: "Password@1"
     ports:
       - "1433:1433"
   fitcast.mailhog:
