--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -4,7 +4,7 @@ services:
     container_name: sqlDb
     environment:
       ACCEPT_EULA: "Y"
-      MSSQL_SA_PASSWORD: "Password@1"
+      MSSQL_SA_PASSWORD: "YourStrongPassword123!"  # Change this to a strong password
     ports:
       - "1433:1433"
   fitcast.mailhog:
