--- a/ClientDashboard_GUI/package.json
+++ b/ClientDashboard_GUI/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@primeuix/themes": "^1.2.3",
+    "chart.js": "^4.5.1",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.4",
     "rxjs": "~7.8.0",
