Set up ML folder within main api directory along with providing new controller and job further relating to machine learning prosedures

--- a/ClientDashboard_API/ClientDashboard_API.csproj
+++ b/ClientDashboard_API/ClientDashboard_API.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Twilio" Version="7.13.0" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="ML\TrainedModels\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
